add new comment 'hello'

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <!-- sratr this is stylesheet css  -->
     <link rel="stylesheet" href="css/stylesheet.css">
     <!-- end this is stylesheet css  -->
+    <!-- hello -->
 </head>
 <body>
   <!-- Start Header -->
